# sdl_samp

./: .gitignore  CMakeLists.txt
src/: main.cpp
